tests/expected/err-record2.uc.out
/home/krikava/Teaching/FIT/NI-APR/2022/microc/tests/../examples/err-record2.uc:[6:21]: error: Non-existing field (c) access in {a:1,b:2}
      output (*(*n).c).c; // error: missing field
                      ^

1
